# AETHER

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Todo_Roadmap.txt  aether_config.cfg  build_instructions.txt  instructions_for_build.txt  kokkos_build_instructions.txt  plot_aether_snapshot.py  rebuild_all.sh  script_build.sh
.git-old/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git-old/logs/refs/heads/: main
.git-old/logs/refs/remotes/origin/: HEAD  main
.git-old/objects/pack/: pack-3615827fd4c965e89d90f663491300fd108079db.idx  pack-3615827fd4c965e89d90f663491300fd108079db.pack  pack-3615827fd4c965e89d90f663491300fd108079db.rev
.git-old/refs/heads/: main
.git-old/refs/remotes/origin/: main
DebugTest/: Strides.cpp
OutputData/: snap_metadata.txt
OutputData/DMR_PPM_NoShot/: snap_metadata.txt
OutputData/InternalplusTransverse/: snap_metadata.txt
OutputData/SOD_Y_PPM/: snap_metadata.txt
OutputData/SODtest/: snap_metadata.txt
OutputData/Sod/: snap_metadata.txt
OutputData/Sod1D_PPM/: snap_metadata.txt
OutputData/Sod_Y/: snap_metadata.txt
OutputData/Sod_forcing/: snap_metadata.txt
OutputData/Sod_forcing_new/: snap_metadata.txt
OutputData/Sod_transverse/: snap_metadata.txt
OutputData/test/: snap_metadata.txt
include/aether/: config_build.hpp.in
include/aether/core/: Initialize.hpp  Kokkos_Policy.hpp  Kokkos_loopBounds.hpp  RiemannDispatch.hpp  RunParams.hpp  RunParams_io.hpp  SpaceDispatch.hpp  TemporalDispatch.hpp  boundary_conditions.hpp  char_struct.hpp  con_layout.hpp  config.hpp  config_build.hpp.in.cmake  cons_correction.hpp  enums.hpp  enums_util.hpp  flux_difference.hpp  prim_char_convert.hpp  prim_layout.hpp  simulation.hpp  slope_limiters.hpp  stencil_templates.hpp  strides.hpp  sweep_dir_selection_helpers.hpp  time_stepper_containers.hpp  views.hpp
include/aether/core/CTU/: ctu_half_time_step.hpp  ctu_total_correction.hpp  ctu_transverse_correction.hpp  half_step_flux_update.hpp
include/aether/core/space_solvers/: fog.hpp
include/aether/io/: binary_snapshot.hpp  metadata.hpp  plaintext_snapshot.hpp  snapshot.hpp
include/aether/math/: mats.hpp  vec3.hpp
include/aether/physics/: api.hpp  counts.hpp
include/aether/physics/euler/: Internal_Energy.hpp  convert.hpp  pop_eigs.hpp  public.hpp  time_controller.hpp  variable_structs.hpp
include/aether/physics/euler/RiemannSolvers/: hll.hpp  hllc.hpp  tc.hpp
include/aether/physics/euler/linear_correction/: linear_cor.hpp
include/aether/physics/mhd/: public.hpp
include/aether/physics/srhd/: public.hpp
include/aether/state/: hydro.hpp
plotting/: animate.py  config.py  fields.py  io.py  main.py  plot1d.py  plot2d.py  plot3d.py
src/: Initialize.cpp  RiemannDispatcher.cpp  RunParams_io.cpp  SpaceDispatch.cpp  TemporalDispatch.cpp  boundary_conditions.cpp  ctu_half_time_step.cpp  ctu_half_time_step_depracated.cpp  ctu_total_correction.cpp  ctu_transverse_correction.cpp  enums_util.cpp  half_step_flux_update.cpp  linear_cor.cpp  main.cpp  prim_char_convert.cpp
src/io/: snapshot.cpp
src/physics/: CMakeLists.txt
src/physics/euler/: CMakeLists.txt  active_impl.cpp  convert.cpp  pop_eigs.cpp
src/physics/mhd/: CMakeLists.txt  active_impl.cpp
src/physics/srhd/: CMakeLists.txt  active_impl.cpp
